--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -17,7 +17,7 @@ Search: <input class="form-control" placeholder="type!" id="id_search" maxlength
 {% include 'app/table_body.html' %}
 </tbody>
 <div id ="gif1"></div>
-
+<script src="{% static 'app/js/jquery.min.js' %}"></script>
 <script>
 		var delay = (function(){
 		var timer = 0;
